CI: arrumando problemas no server.ts, configurando o eslint e o prettier
